--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "orange-labs": {
+    "kayak": {
       "root": "",
       "sourceRoot": "src",
       "projectType": "application",
@@ -17,7 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/orange-labs",
+            "outputPath": "dist/kayak",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -71,22 +71,22 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "orange-labs:build"
+            "browserTarget": "kayak:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "orange-labs:build:production"
+              "browserTarget": "kayak:build:production"
             },
             "hmr": {
               "hmr": true,
-              "browserTarget": "orange-labs:build:hmr"
+              "browserTarget": "kayak:build:hmr"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "orange-labs:build"
+            "browserTarget": "kayak:build"
           }
         },
         "test": {
@@ -121,7 +121,7 @@
         }
       }
     },
-    "orange-labs-e2e": {
+    "kayak-e2e": {
       "root": "e2e/",
       "projectType": "application",
       "prefix": "",
@@ -130,11 +130,11 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "orange-labs:serve"
+            "devServerTarget": "kayak:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "orange-labs:serve:production"
+              "devServerTarget": "kayak:serve:production"
             }
           }
         },
@@ -150,7 +150,7 @@
       }
     }
   },
-  "defaultProject": "orange-labs",
+  "defaultProject": "kayak",
   "cli": {
     "defaultCollection": "@ngrx/schematics"
   }
